// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListPublicSSO /> renders all element with France Connect 1`] = `
<div
  className="ListGroup__Container-hRGxhC fjfyPs list-group"
>
  <span
    className="ListPublicSSO__ListGroupItemWithJustifyContentStart-fmVrTp hnwSlW list-group-item"
  >
    <div
      className="Togglestyle__ToggleContainer-bAFtsA beCpYP toggle-container"
    >
      <div>
        <label
          className="Togglestyle__LabelContainer-nyUOg gGLUcC unchecked labelContainer"
          disabled={false}
          htmlFor="toggle-franceConnect"
        >
          <div
            checked={false}
            className="Togglestyle__TogglerWrapper-hIrWcm gVufNR"
            disabled={false}
            id="TOGGLE_"
          >
            <span
              className="circle-toggler"
            />
          </div>
          <span
            className="label-toggler"
          >
            <h5
              className="mb-0 mt-0"
            >
              capco.module.login_franceconnect
            </h5>
          </span>
        </label>
        <input
          checked={false}
          disabled={false}
          id="toggle-franceConnect"
          onChange={[Function]}
          type="checkbox"
        />
      </div>
    </div>
  </span>
  <span
    className="ListPublicSSO__ListGroupItemWithJustifyContentStart-fmVrTp hnwSlW list-group-item"
  >
    <div
      className="Togglestyle__ToggleContainer-bAFtsA beCpYP toggle-container"
    >
      <div>
        <label
          className="Togglestyle__LabelContainer-nyUOg gGLUcC unchecked labelContainer"
          disabled={false}
          htmlFor="toggle-facebook"
        >
          <div
            checked={false}
            className="Togglestyle__TogglerWrapper-hIrWcm gVufNR"
            disabled={false}
            id="TOGGLE_"
          >
            <span
              className="circle-toggler"
            />
          </div>
          <span
            className="label-toggler"
          >
            <h5
              className="mb-0 mt-0"
            >
              Facebook
            </h5>
          </span>
        </label>
        <input
          checked={false}
          disabled={false}
          id="toggle-facebook"
          onChange={[Function]}
          type="checkbox"
        />
      </div>
    </div>
    <div
      className="sc-bdnxRM kMEPpk"
    >
      <button
        aria-controls="id-1"
        aria-expanded={false}
        aria-haspopup="dialog"
        className="sc-bdnxRM Button__ButtonInner-dWPVNG bobTHH laeJgQ"
        onClick={[Function]}
        onClickCapture={[Function]}
        onKeyDown={[Function]}
        onKeyPressCapture={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        type="button"
      >
        Global.configure
      </button>
      <div
        aria-label="facebook-modal-lg"
        aria-modal={true}
        data-dialog={true}
        hidden={true}
        id="id-1"
        onAnimationEnd={[Function]}
        onBlur={[Function]}
        onKeyDown={[Function]}
        onTransitionEnd={[Function]}
        role="dialog"
        style={
          Object {
            "display": "none",
          }
        }
        tabIndex={-1}
      />
    </div>
  </span>
  <span
    className="ListPublicSSO__ListGroupItemWithJustifyContentStart-fmVrTp hnwSlW list-group-item"
  >
    <div
      className="Togglestyle__ToggleContainer-bAFtsA beCpYP toggle-container"
    >
      <div>
        <label
          className="Togglestyle__LabelContainer-nyUOg gGLUcC checked labelContainer"
          disabled={true}
          htmlFor="toggle-email"
        >
          <div
            checked={true}
            className="Togglestyle__TogglerWrapper-hIrWcm eJrpzD"
            disabled={true}
            id="TOGGLE_"
          >
            <span
              className="circle-toggler"
            />
          </div>
          <span
            className="label-toggler"
          >
            <h5
              className="mb-0 mt-0"
            >
              global.email
            </h5>
          </span>
        </label>
        <input
          checked={true}
          disabled={true}
          id="toggle-email"
          onChange={[Function]}
          type="checkbox"
        />
      </div>
    </div>
  </span>
</div>
`;

exports[`<ListPublicSSO /> renders correctly without France Connect 1`] = `
<div
  className="ListGroup__Container-hRGxhC fjfyPs list-group"
>
  <span
    className="ListPublicSSO__ListGroupItemWithJustifyContentStart-fmVrTp hnwSlW list-group-item"
  >
    <div
      className="Togglestyle__ToggleContainer-bAFtsA beCpYP toggle-container"
    >
      <div>
        <label
          className="Togglestyle__LabelContainer-nyUOg gGLUcC unchecked labelContainer"
          disabled={false}
          htmlFor="toggle-franceConnect"
        >
          <div
            checked={false}
            className="Togglestyle__TogglerWrapper-hIrWcm gVufNR"
            disabled={false}
            id="TOGGLE_"
          >
            <span
              className="circle-toggler"
            />
          </div>
          <span
            className="label-toggler"
          >
            <h5
              className="mb-0 mt-0"
            >
              capco.module.login_franceconnect
            </h5>
          </span>
        </label>
        <input
          checked={false}
          disabled={false}
          id="toggle-franceConnect"
          onChange={[Function]}
          type="checkbox"
        />
      </div>
    </div>
    <div
      className="sc-bdnxRM kMEPpk"
    >
      <button
        aria-controls="id-1"
        aria-expanded={false}
        aria-haspopup="dialog"
        className="sc-bdnxRM Button__ButtonInner-dWPVNG bobTHH laeJgQ"
        onClick={[Function]}
        onClickCapture={[Function]}
        onKeyDown={[Function]}
        onKeyPressCapture={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        type="button"
      >
        global.install
      </button>
      <div
        aria-label="france.connect.teaser"
        aria-modal={true}
        data-dialog={true}
        hidden={true}
        id="id-1"
        onAnimationEnd={[Function]}
        onBlur={[Function]}
        onKeyDown={[Function]}
        onTransitionEnd={[Function]}
        role="dialog"
        style={
          Object {
            "display": "none",
          }
        }
        tabIndex={-1}
      />
    </div>
  </span>
  <span
    className="ListPublicSSO__ListGroupItemWithJustifyContentStart-fmVrTp hnwSlW list-group-item"
  >
    <div
      className="Togglestyle__ToggleContainer-bAFtsA beCpYP toggle-container"
    >
      <div>
        <label
          className="Togglestyle__LabelContainer-nyUOg gGLUcC unchecked labelContainer"
          disabled={false}
          htmlFor="toggle-facebook"
        >
          <div
            checked={false}
            className="Togglestyle__TogglerWrapper-hIrWcm gVufNR"
            disabled={false}
            id="TOGGLE_"
          >
            <span
              className="circle-toggler"
            />
          </div>
          <span
            className="label-toggler"
          >
            <h5
              className="mb-0 mt-0"
            >
              Facebook
            </h5>
          </span>
        </label>
        <input
          checked={false}
          disabled={false}
          id="toggle-facebook"
          onChange={[Function]}
          type="checkbox"
        />
      </div>
    </div>
    <div
      className="sc-bdnxRM kMEPpk"
    >
      <button
        aria-controls="id-2"
        aria-expanded={false}
        aria-haspopup="dialog"
        className="sc-bdnxRM Button__ButtonInner-dWPVNG bobTHH laeJgQ"
        onClick={[Function]}
        onClickCapture={[Function]}
        onKeyDown={[Function]}
        onKeyPressCapture={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        type="button"
      >
        Global.configure
      </button>
      <div
        aria-label="facebook-modal-lg"
        aria-modal={true}
        data-dialog={true}
        hidden={true}
        id="id-2"
        onAnimationEnd={[Function]}
        onBlur={[Function]}
        onKeyDown={[Function]}
        onTransitionEnd={[Function]}
        role="dialog"
        style={
          Object {
            "display": "none",
          }
        }
        tabIndex={-1}
      />
    </div>
  </span>
  <span
    className="ListPublicSSO__ListGroupItemWithJustifyContentStart-fmVrTp hnwSlW list-group-item"
  >
    <div
      className="Togglestyle__ToggleContainer-bAFtsA beCpYP toggle-container"
    >
      <div>
        <label
          className="Togglestyle__LabelContainer-nyUOg gGLUcC checked labelContainer"
          disabled={true}
          htmlFor="toggle-email"
        >
          <div
            checked={true}
            className="Togglestyle__TogglerWrapper-hIrWcm eJrpzD"
            disabled={true}
            id="TOGGLE_"
          >
            <span
              className="circle-toggler"
            />
          </div>
          <span
            className="label-toggler"
          >
            <h5
              className="mb-0 mt-0"
            >
              global.email
            </h5>
          </span>
        </label>
        <input
          checked={true}
          disabled={true}
          id="toggle-email"
          onChange={[Function]}
          type="checkbox"
        />
      </div>
    </div>
  </span>
</div>
`;
